--- a/css_3.css
+++ b/css_3.css
@@ -3,12 +3,25 @@
         @content;
     }
 }
-
+h1{
+    font-family: 'Bookman, URW Bookman L', serif;
+	font-size: 40px;
+    text-align: center;
+    color: rgb(32, 13, 54)
+}
+p{
+    font-family: ;'Bookman, URW Bookman L', serif;
+	font-size: 22px;
+    text-align: center;
+    text-shadow: 3px 3px 3px #333;
+    color: white
+}
 body, html {
   font-family: 'Vollkorn', serif;
   font-weight: 400;
   line-height: 1.3;
   font-size: 16px;
+  background-color: rgb(174, 156, 255);
 }
 
 .siteTitle {
@@ -39,7 +52,7 @@ footer {
   text-decoration: none;
   border: 4px solid #b0215e;
   margin-bottom: 20px;
-  background-image: url('https://images.unsplash.com/photo-1516051662687-567d7c4e8f6a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1868&q=80');
+  background-image: url("rockartist.jpg");
     background-size: cover;
   
   @include media {
@@ -84,13 +97,20 @@ footer {
 }
 
 .card2 {
-  background-image: url('https://images.unsplash.com/photo-1496317556649-f930d733eea3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+  background-image: url("classicalartist.jpg");
 }
 
 .card3 {
   background-image: url('https://images.unsplash.com/photo-1557576842-3bc6093a5085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
 }
 
+.card4 {
+    background-image: url('https://images.unsplash.com/photo-1496317556649-f930d733eea3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+}
+
+.card5 {
+    background-image: url('https://images.unsplash.com/photo-1496317556649-f930d733eea3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+}
 footer {
   display: flex;
   justify-content: center;
