--- a/css_3.css
+++ b/css_3.css
@@ -101,7 +101,7 @@ footer {
 }
 
 .card3 {
-  background-image: url('https://images.unsplash.com/photo-1557576842-3bc6093a5085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+  background-image: url("popartist.jpg");
 }
 
 .card4 {
