--- a/css_3.css
+++ b/css_3.css
@@ -43,15 +43,15 @@ footer {
 }
 
 .card {
-  height: 400px;
+  height: 450px;
   position: relative;
   padding: 20px;
   box-sizing: border-box;
   display: flex;
   align-items: flex-end;
   text-decoration: none;
-  border: 4px solid #b0215e;
-  margin-bottom: 20px;
+  border: 2.5px solid #601463;
+  margin-bottom: 50px;
   background-image: url("rockartist.jpg");
     background-size: cover;
   
@@ -66,7 +66,8 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center; 
-  background: white;
+  background: rgb(174, 156, 255);
+  border-radius: 25px;
   box-sizing: border-box;
   padding: 40px;
   
@@ -77,12 +78,11 @@ footer {
 }
 
 .title {
-  font-size: 24px;
-  color: black;  
+  font-family: 'Bookman, URW Bookman L', serif;
+font-size: 3.8vh;
+  color: rgb(32, 13, 54);  
   text-align: center;
   font-weight: 700;
-  color: #181818;
-  text-shadow: 0px 2px 2px #a6f8d5;
   position: relative;
   margin: 0 0 20px 0;
   
@@ -98,18 +98,27 @@ footer {
 
 .card2 {
   background-image: url("classicalartist.jpg");
+    background-size: cover;
+    background-position: 100px 0px;
 }
 
 .card3 {
-  background-image: url('https://images.unsplash.com/photo-1557576842-3bc6093a5085?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+  background-image: url("popartist.jpg");
+    background-size: cover;
+    background-position: 100px 0px
 }
 
 .card4 {
-    background-image: url('https://images.unsplash.com/photo-1496317556649-f930d733eea3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+  background-image: url("countryartist.jpg");
+    background-size: cover;
+    background-position: 100px 0px
 }
 
 .card5 {
-    background-image: url('https://images.unsplash.com/photo-1496317556649-f930d733eea3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+  background-image: url("jazzartist.jpg");
+    background-size: cover;
+    background-position: 100px 0px
+    
 }
 footer {
   display: flex;
