--- a/css_3.css
+++ b/css_3.css
@@ -7,7 +7,8 @@ h1{
     font-family: 'Bookman, URW Bookman L', serif;
 	font-size: 40px;
     text-align: center;
-    color: rgb(32, 13, 54)
+    color: rgb(32, 13, 54);
+    text-shadow: 3px 3px 3px #333;
 }
 p{
     font-family: ;'Bookman, URW Bookman L', serif;
@@ -47,6 +48,7 @@ footer {
   position: relative;
   padding: 20px;
   box-sizing: border-box;
+  box-shadow: 0 20px 30px rgba(0,0,0,.1);
   display: flex;
   align-items: flex-end;
   text-decoration: none;
