--- a/css_3.css
+++ b/css_3.css
@@ -62,6 +62,7 @@ footer {
 
 .inner {
   height: 50%;
+  width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -80,6 +81,7 @@ footer {
 .title {
   font-family: 'Bookman, URW Bookman L', serif;
 font-size: 3.8vh;
+  top: +10px;
   color: rgb(32, 13, 54);  
   text-align: center;
   font-weight: 700;
@@ -94,6 +96,7 @@ font-size: 3.8vh;
 .subtitle {
   color: #b0215e;
   text-align: center;
+font-size: 2.2vh
 }
 
 .card2 {
