--- a/css_3.css
+++ b/css_3.css
@@ -7,11 +7,12 @@ h1{
     font-family: 'Bookman, URW Bookman L', serif;
 	font-size: 40px;
     text-align: center;
-    color: rgb(32, 13, 54)
+    color: rgb(32, 13, 54);
+    text-shadow: 3px 3px 3px #333;
 }
 p{
-    font-family: ;'Bookman, URW Bookman L', serif;
-	font-size: 22px;
+    font-family:'Bookman, URW Bookman L', serif;
+	font-size: 20px;
     text-align: center;
     text-shadow: 3px 3px 3px #333;
     color: white
@@ -19,9 +20,10 @@ p{
 body, html {
   font-family: 'Vollkorn', serif;
   font-weight: 400;
-  line-height: 1.3;
+  line-height: 1.1;
   font-size: 16px;
   background-color: rgb(174, 156, 255);
+  text-justify:  ;
 }
 
 .siteTitle {
@@ -43,15 +45,16 @@ footer {
 }
 
 .card {
-  height: 400px;
+  height: 450px;
   position: relative;
   padding: 20px;
   box-sizing: border-box;
+  box-shadow: 0 20px 30px rgba(0,0,0,.1);
   display: flex;
   align-items: flex-end;
   text-decoration: none;
-  border: 4px solid #b0215e;
-  margin-bottom: 20px;
+  border: 2.5px solid #601463;
+  margin-bottom: 50px;
   background-image: url("rockartist.jpg");
     background-size: cover;
   
@@ -62,11 +65,13 @@ footer {
 
 .inner {
   height: 50%;
+  width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center; 
-  background: white;
+  background: rgb(174, 156, 255);
+  border-radius: 25px;
   box-sizing: border-box;
   padding: 40px;
   
@@ -77,12 +82,12 @@ footer {
 }
 
 .title {
-  font-size: 24px;
-  color: black;  
+  font-family: 'Bookman, URW Bookman L', serif;
+font-size: 3.8vh;
+  top: +10px;
+  color: rgb(32, 13, 54);  
   text-align: center;
   font-weight: 700;
-  color: #181818;
-  text-shadow: 0px 2px 2px #a6f8d5;
   position: relative;
   margin: 0 0 20px 0;
   
@@ -94,22 +99,32 @@ footer {
 .subtitle {
   color: #b0215e;
   text-align: center;
+font-size: 2.2vh
 }
 
 .card2 {
   background-image: url("classicalartist.jpg");
+    background-size: cover;
+    background-position: 100px 0px;
 }
 
 .card3 {
   background-image: url("popartist.jpg");
+    background-size: cover;
+    background-position: 100px 0px
 }
 
 .card4 {
-    background-image: url('https://images.unsplash.com/photo-1496317556649-f930d733eea3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+  background-image: url("countryartist.jpg");
+    background-size: cover;
+    background-position: 100px 0px
 }
 
 .card5 {
-    background-image: url('https://images.unsplash.com/photo-1496317556649-f930d733eea3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
+  background-image: url("jazzartist.jpg");
+    background-size: cover;
+    background-position: 100px 0px
+    
 }
 footer {
   display: flex;
