--- a/css_3.css
+++ b/css_3.css
@@ -7,8 +7,8 @@ h1{
     font-family: 'Bookman, URW Bookman L', serif;
 	font-size: 40px;
     text-align: center;
-    color: rgb(32, 13, 54);
-    text-shadow: 3px 3px 3px #333;
+    color: white;
+    text-shadow: 3px 3px 3px #4721b0;
 }
 p{
     font-family:'Bookman, URW Bookman L', serif;
