--- a/css_2.css
+++ b/css_2.css
@@ -6,20 +6,21 @@ h1{
 	font-family: 'Bookman, URW Bookman L', serif;
 	font-size: 40px;
     text-align: center;
-    color: rgb(32, 13, 54)
+    color: white;
+    text-shadow: 3px 3px 3px #4721b0;
 }
 p {
     font-family: ;'Bookman, URW Bookman L', serif;
 	font-size: 22px;
     text-align: center;
-    text-shadow: 3px 3px 3px #333;
+    text-shadow: 3px 3px 3px #4721b0;
     color: white
 }
 h2 {
     font-family: 'Bookman, URW Bookman L', serif;
 	font-size: 25px;
     text-align: center;
-    text-shadow: 3px 3px 3px #333;
+    text-shadow: 3px 3px 3px #4721b0;
     color: white
 }
 .container {
@@ -48,7 +49,7 @@ h2 {
   
   .box > span {
     font-size: 3.8vh;
-    color: rgb(32, 13, 54);
+    color: #4721b0;
     text-shadow: 3px 3px 3px #333;
     display: block;
     text-align: center;
@@ -76,7 +77,7 @@ h2 {
     font-size: 1.1em;
     color: white;
     text-shadow: 3px 3px 3px black;
-    box-shadow: 0 6px 6px rgb(32, 13, 54);
+    box-shadow: 0 6px 6px #4721b0;
     outline: none;
   }
   button:active {
