--- a/css_3.css
+++ b/css_3.css
@@ -22,7 +22,7 @@ body, html {
   font-weight: 400;
   line-height: 1.1;
   font-size: 16px;
-  text-justify:  ;
+  line-height: 15px;
 }
 
 #grad, html {
