--- a/css_4.css
+++ b/css_4.css
@@ -1,3 +1,12 @@
+.WebContainer{
+    width: 100%;
+    height: auto;
+}
+.articles{
+    width:90%; /*Takes 90% width from WebContainer*/
+    height: auto;
+    margin: auto;
+}
 @import url("https://fonts.googleapis.com/css?family=Karla|Space+Mono");
 
 :root {
