--- a/css_1.css
+++ b/css_1.css
@@ -13,7 +13,7 @@ header {
 header .overlay{
 	width: 100%;
 	height: 100%;
-	padding: 50px;
+	padding: 75px;
 	color: white;
 	text-shadow: 3px 3px 3px #4721b0;
   background-image: url("music_wallpaper_frontpage.jpg");
@@ -21,15 +21,14 @@ header .overlay{
 }
 
 h1 {
-	font-family: 'Courier New', Courier, monospace;
-	font-size: 80px;
-	font-weight: 550;
+	font-family: 'Gill Sans', sans-serif;
+	font-size: 75px;
 	margin-bottom: 30px;
 	color:white
 }
 
 h2, p {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Verdana', sans-serif;
     font-size: 25px;
 	margin-bottom: 30px;
 	color: white;
