--- a/navigationbar.css
+++ b/navigationbar.css
@@ -21,3 +21,24 @@
     font-size: 18px;
 }
 
+.menu li:hover {
+    background-color: wheat;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+.menu li {
+    padding: 5px 14px;
+}
+
+.services {
+    position: relative;
+}
+
+.dropdown {
+    background-color: wheat;
+    padding: 1em 0;
+    position: absolute;
+    display: none;
+    
+}
