updated fonts + color scheme

--- a/css_2.css
+++ b/css_2.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("wallpaper_css_2.jpg");
-    background-color: rgb(174, 156, 255);
+    background-color: #d2c7e5;
 }
 h1{
 	font-family: 'Bookman, URW Bookman L', serif;
