--- a/css_3.css
+++ b/css_3.css
@@ -12,7 +12,7 @@ h1{
     text-shadow: 3px 3px 3px #2e2837;
 }
 p{
-    font-family:'Bookman, URW Bookman L', serif;
+    font-family:'Courier New', monospace;
 	font-size: 20px;
     text-align: center;
     text-shadow: 3px 3px 3px #333;
@@ -57,7 +57,7 @@ footer {
   display: flex;
   align-items: flex-end;
   text-decoration: none;
-  border: 2.5px solid #601463;
+  border: 2.5px solid #2e2837;
   margin-bottom: 50px;
   background-image: url("rockartist.jpg");
     background-size: cover;
