--- a/css_3.css
+++ b/css_3.css
@@ -4,21 +4,20 @@
     }
 }
 h1{
-    font-family: 'Courier New', monospace;
-  font-size: 40px;
-  margin-top: 20px;
-    font-weight: bold;
+	font-family: 'Courier New', monospace;
+	font-size: 40px;
     text-align: center;
+    margin-top: 30px;
+    text-shadow: -1px 0 #2e2837, 0 1px #2e2837, 1px 0 #2e2837, 0 -1px #2e2837;
     color: white;
-    text-shadow: 3px 3px 3px #2e2837;
 }
-p{
-    font-family:'Courier New', monospace;
-	font-size: 20px;
-    text-align: center;
+p {
+    font-family: 'Courier New', monospace;
+  font-size: 26px;
     margin-top: 20px;
-    text-shadow: 3px 3px 3px #333;
-    color: white
+    font-weight: lighter;
+    text-align: center;
+    color: #2e2837;
 }
 body, html {
   font-family: 'Vollkorn', serif;
@@ -182,7 +181,7 @@ footer {
 
 .bottom {
   border-radius: 26px;
-  background: #4721b0;
+  background: #dae5c7;
   height: 100%;
   overflow: hidden;
   position: absolute;
@@ -190,7 +189,8 @@ footer {
 }
 
 .cover {
-  background-color: rgb(174, 156, 255);
+  background-color: #d2c7e5;
+  opacity: 0.;
   border-radius: 26px;
   height: 100%;
   position: absolute;
@@ -422,13 +422,13 @@ footer {
   width: 100%;
 }
 .text {
-  color: white;
+  color: #2e2837;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 20px;
   position: absolute;
-  text-shadow: 3px 3px 3px #4721b0;
 }
 .text-dark {
-  color: #fff;
+  color: #2e2837;
 }
 .overlay {
   height: 100%;
