--- a/css_2.css
+++ b/css_2.css
@@ -5,6 +5,7 @@ body {
 h1{
 	font-family: 'Courier New', monospace;
 	font-size: 40px;
+  margin-top: 30px;
     text-align: center;
     text-shadow: -1px 0 #2e2837, 0 1px #2e2837, 1px 0 #2e2837, 0 -1px #2e2837;
     color: white;
