--- a/css_2.css
+++ b/css_2.css
@@ -4,25 +4,26 @@ body {
 }
 h1{
 	font-family: 'Courier New', monospace;
-	font-size: 40px;
+	font-size: 60px;
   margin-top: 30px;
+  margin-bottom: 30px;
     text-align: center;
     text-shadow: -1px 0 #2e2837, 0 1px #2e2837, 1px 0 #2e2837, 0 -1px #2e2837;
     color: white;
 }
 p {
     font-family: 'Courier New', monospace;
-  font-size: 28px;
+  font-size: 22px;
     font-weight: lighter;
     text-align: center;
     color: #2e2837;
 }
 h2 {
-    font-family: 'Courier New', monospace;
-	font-size: 25px;
     text-align: center;
-    font-weight : lighter;
-    color: #2e2837;
+    font-family: 'Courier New', monospace;
+    font-size: 22px;
+	margin-bottom: 30px;
+	color: #2e2837;
 }
 .container {
     display: flex;
