--- a/css_1.css
+++ b/css_1.css
@@ -8,14 +8,16 @@ header {
 	background-attachment: fixed;
 	position: relative;
 	overflow: hidden;
-	border-radius: 0 0 85% 85% / 30%;
+	border-radius: 0 0 65% 75% / 50%;
+	box-shadow: 0 0 20px 3px #2e2837;
 }
 header .overlay{
 	width: 100%;
 	height: 100%;
 	padding: 75px;
-	color: #d2c7e5;
+	color: rgb(210, 199, 229);
   background-image: url("music_wallpaper_frontpage.jpg");
+  
 	
 }
 
