--- a/css_1.css
+++ b/css_1.css
@@ -18,7 +18,6 @@ header .overlay{
 	color: rgb(210, 199, 229);
   background-image: url("music_wallpaper_frontpage.jpg");
   
-	
 }
 
 h1 {
@@ -40,7 +39,7 @@ p{
     font-size: 22px;
 	margin-bottom: 30px;
 	color: #2e2837;
-	
+	font-weight: normal;
 }
 button {
 	border: none;
