--- a/css_4.css
+++ b/css_4.css
@@ -27,7 +27,7 @@ section {
   max-width: var(--sectionWidth);
   margin: 40px auto;
   width: 97%;
-  color: #fff;
+  color: #2e2837;
 }
 
 summary {
