--- a/css_1.css
+++ b/css_1.css
@@ -9,23 +9,24 @@ header {
 	position: relative;
 	overflow: hidden;
 	border-radius: 0 0 65% 75% / 50%;
-	box-shadow: 0 0 20px 3px #2e2837;
+	box-shadow: 0 0 20px 3px black;
 }
 header .overlay{
-	width: 100%;
-	height: 100%;
-	padding: 75px;
-	color: rgb(210, 199, 229);
-  background-image: url("music_wallpaper_frontpage.jpg");
-  
+    width: 100%;
+    height: 100%;
+    padding: 75px;
+    color: rgb(210, 199, 229);
+    background-image: url("music_wallpaper_frontpage.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	backdrop-filter: blur(4px);
 }
 
 h1 {
 	font-family: 'Courier New', monospace;
 	font-size: 60px;
 	margin-bottom: 30px;
-	text-shadow: -1px 0 #2e2837, 0 1px #2e2837, 1px 0 #2e2837, 0 -1px #2e2837;
-	color:white
+	color:#2e2837;
 }
 
 h2{
@@ -38,7 +39,8 @@ p{
 	font-family: 'Courier New', monospace;
     font-size: 25px;
 	font-weight: 600;
-	background-color: #d2c7e5;
+	opacity: 0.8;
+	text-shadow: 0 0 100px #d2c7e5;
 	margin-bottom: 30px;
 	color: #2e2837;
 	font-weight: normal;
@@ -74,7 +76,7 @@ body{
   font-family: 'Courier New', monospace;
   color:white;
   font-weight:300;
-  background-color: #d2c7e5;
+  background-color: #2e2837;
 }
 section{
   text-align:center;
@@ -82,7 +84,8 @@ section{
 .footer #button{
 	width:35px;
 	height:35px;
-	border: #727172 12px solid;
+	border: #d2c7e5 12px solid;
+	opacity: 0.4;
 	border-radius:35px;
 	margin:0 auto;
 	position:relative;
@@ -134,6 +137,7 @@ height:100%;
   top:0;
   left:0;
 	background:#d2c7e5;
+	opacity: 0.4;
 }
 .footer #cont{
   position:relative;
@@ -150,7 +154,7 @@ height:100%;
 }
 .footer h3{
 	font-family: 'Courier New', monospace;
-	color: black;
+	color: #2e2837;
 	font-size: 25px;
 	margin-top:60px;
 	margin-left:40px;
