--- a/css_1.css
+++ b/css_1.css
@@ -23,7 +23,7 @@ header .overlay{
 }
 
 h1 {
-	font-family: 'Courier New', monospace;
+	font-family: 'Oooh Baby', cursive;
 	font-size: 60px;
 	margin-bottom: 30px;
 	color:#2e2837;
