--- a/css_2.css
+++ b/css_2.css
@@ -1,6 +1,5 @@
-body {
-    background-image: url("wallpaper_css_2.jpg");
-    background-color: #d2c7e5;
+#grad, html {
+  background-image: linear-gradient(to right,#d2c7e5, #dae5c7);
 }
 h1{
 	font-family: 'Courier New', monospace;
@@ -8,8 +7,7 @@ h1{
   margin-top: 30px;
   margin-bottom: 30px;
     text-align: center;
-    text-shadow: -1px 0 #2e2837, 0 1px #2e2837, 1px 0 #2e2837, 0 -1px #2e2837;
-    color: white;
+    color: #2e2837;
 }
 p {
     font-family: 'Courier New', monospace;
