--- a/css_3.css
+++ b/css_3.css
@@ -8,8 +8,7 @@ h1{
 	font-size: 40px;
     text-align: center;
     margin-top: 30px;
-    text-shadow: -1px 0 #2e2837, 0 1px #2e2837, 1px 0 #2e2837, 0 -1px #2e2837;
-    color: white;
+    color:#2e2837;
 }
 p {
     font-family: 'Courier New', monospace;
