--- a/css_1.css
+++ b/css_1.css
@@ -36,9 +36,8 @@ h2{
 	color: #2e2837;
 }
 p{
-	font-family: 'Courier New', monospace;
+	font-family: 'Antonio', sans-serif;
     font-size: 25px;
-	font-weight: 600;
 	text-shadow: 0 0 100px #d2c7e5;
 	margin-bottom: 30px;
 	color: #2e2837;
