--- a/css_2.css
+++ b/css_2.css
@@ -2,7 +2,7 @@
   background-image: linear-gradient(to right,#d2c7e5, #dae5c7);
 }
 h1{
-	font-family: 'Courier New', monospace;
+	font-family: 'Oooh Baby', cursive;
 	font-size: 60px;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -10,8 +10,8 @@ h1{
     color: #2e2837;
 }
 p {
-    font-family: 'Courier New', monospace;
-  font-size: 22px;
+    font-family: 'Antonio', sans-serif;
+  font-size: 25px;
     font-weight: lighter;
     text-align: center;
     color: #2e2837;
