--- a/css_1.css
+++ b/css_1.css
@@ -9,40 +9,43 @@ header {
 	position: relative;
 	overflow: hidden;
 	border-radius: 0 0 65% 75% / 50%;
-	box-shadow: 0 0 20px 3px black;
+	box-shadow: 0px 10px 20px #2e2837;
 }
 header .overlay{
     width: 100%;
-    height: 100%;
-    padding: 75px;
+    height: 800px;
+    padding: 1px;
     color: rgb(210, 199, 229);
-    background-image: url("music_wallpaper_frontpage.jpg");
+    background-image: url("original.png");
 	background-repeat: no-repeat;
-	background-size: cover;
+	background-size:cover;
 	backdrop-filter: blur(4px);
+	opacity: 0.7;
 }
 
 h1 {
 	font-family: 'Courier New', monospace;
 	font-size: 60px;
-	margin-bottom: 30px;
-	color:#2e2837;
+	margin-bottom: 50px;
+	margin-top: 50px;
+	color:#d2c7e5;
 }
 
 h2{
 	font-family: 'Courier New', monospace;
     font-size: 22px;
 	margin-bottom: 30px;
-	color: #2e2837;
+	color: #d2c7e5;
 }
 p{
 	font-family: 'Courier New', monospace;
     font-size: 25px;
 	font-weight: 600;
+	padding: 50px 50px;
 	opacity: 0.8;
-	text-shadow: 0 0 100px #d2c7e5;
+	text-shadow: 0 0 100px #2e2837;
 	margin-bottom: 30px;
-	color: #2e2837;
+	color: #d2c7e5;
 	font-weight: normal;
 }
 button {
@@ -52,7 +55,7 @@ button {
 	border-radius: 50px;
 	width: 450px;
 	height: 85px;
-	color: #2e2837;
+	color: #696472;
 	background: #fff;
 	opacity: 0.8;
 	margin-bottom: 50px;
@@ -68,7 +71,7 @@ button:active {
     /* set time duration to your needs */
     animation: gradient 100ms;
     background: #dae5c7;
-	color:#2e2837;
+	color:#696472;
 }
 
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);
@@ -76,7 +79,7 @@ body{
   font-family: 'Courier New', monospace;
   color:white;
   font-weight:300;
-  background-color: #2e2837;
+  background-color: #696472;
 }
 section{
   text-align:center;
@@ -136,7 +139,7 @@ height:100%;
   position:relative;
   top:0;
   left:0;
-	background:#d2c7e5;
+	background:#fff;
 	opacity: 0.4;
 }
 .footer #cont{
@@ -155,6 +158,7 @@ height:100%;
 .footer h3{
 	font-family: 'Courier New', monospace;
 	color: #2e2837;
+	font-weight: normal;
 	font-size: 25px;
 	margin-top:60px;
 	margin-left:40px;
