--- a/css_1.css
+++ b/css_1.css
@@ -14,12 +14,11 @@ header {
 header .overlay{
     width: 100%;
     height: 800px;
-    padding: 1px;
+    padding: 9px;
     color: rgb(210, 199, 229);
     background-image: url("music_wallpaper_frontpage.jpg");
 	background-repeat: no-repeat;
 	background-size:cover;
-	backdrop-filter: blur(4px);
 	opacity: 0.7;
 }
 
@@ -84,8 +83,8 @@ section{
 .footer #button{
 	width:35px;
 	height:35px;
-	border: #d2c7e5 12px solid;
-	opacity: 0.9;
+	border: #2e2837 12px solid;
+	opacity: 0.5;
 	border-radius:35px;
 	margin:0 auto;
 	position:relative;
