--- a/navigationbar.css
+++ b/navigationbar.css
@@ -21,7 +21,7 @@ a {
     background-color: rgb(46, 40, 55, 0.4);
     color: #d2c7e5;
     box-shadow: 0 10px 10px #2e283777;
-    opacity: 90%;
+    opacity: 85%;
 }
 .nav-links a {
     color: #d2c7e5;
@@ -35,11 +35,10 @@ a {
     font-size: 18px;
 }
 .menu li:hover {
-    background-color: #dae5c7 ;
-    opacity: 0.4;
+    background-color: #dae5c77c ;
     border-radius: 5px;
     transition: 0.3s ease;
-    color: #;
+    color: #fff;
 }
 .menu li {
     padding: 5px 14px;
